gtk-4.0/widgets/_sidebar.scss
/***********
 * Sidebar *
 ***********/
 .sidebar {
  border-style: none;
  border-width: 0;
  background-color: mix($bg_color, $base_color, 50%);

  .frame{
    border: none;
  }

  @at-root %sidebar_left,
  &:dir(ltr),
  &.left,
  &.left:dir(rtl) {
    border-right: none;
    border-left-style: none;
  }

  @at-root %sidebar_right
  &:dir(rtl),
  &.right {
    border-left: 1px solid $borders_color;
    border-right-style: none;
  }

  &:backdrop {
    background-color: $backdrop_sidebar_bg_color;
    border-color: $backdrop_borders_color;
    transition: $backdrop_transition;
  }

  row{
    padding: 8px 12px;
    transition: all .12s ease-in;
    &:selected{
      color: $selected_fg_color;
      // border-left: 4px solid $selected_bg_color;
      &:backdrop{
        color: $backdrop_selected_fg_color;
        background: $backdrop_selected_bg_color;
        label{
          color: $selected_fg_color;
        }  
      }
      &:hover{
        // background-color: transparentize($selected_bg_color, 0.8);
      }
      label{
        color: $selected_fg_color;
      }
    }
  }

    //elementary os file manager
    &.source-list{
      background: $_sidebar_color;
      padding: 4px 0px;
      &.view{
        transition: all .12s ease-in;
        &:selected {
          background:  transparentize(darken($_sidebar_color, 3%), 0.07);
          color: #98abb2;
          &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
    
          &.has-open-popup,
          &:hover {
            background:  transparentize(darken($_sidebar_color, 3%), 0.07);
            color: #fff;
          }
    
          &:backdrop {  background: transparentize(darken($_sidebar_color, 3%), 0.07); }
        }
        &:hover, iconview.source-list:hover { 
            background-color: if(variant == light, transparentize($bg_color, 0.6), transparentize($bg_color, 0.6)); 
        }
      }
    }
    

  paned & { &.left, &.right, &.left:dir(rtl), &:dir(rtl), &:dir(ltr), & {
    border-style: none;
    border-color: $borders_color;
  }
}
}

stacksidebar {
  &.sidebar {
    &:dir(ltr),
    &.left,
    &.left:dir(rtl) { list { @extend %sidebar_left; }}

    &:dir(rtl),
    &.right { list { @extend %sidebar_right; }}
  }

  row {
    padding: 10px 4px;

    > label {
      padding-left: 6px;
      padding-right: 6px;
    }

    &.needs-attention > label {
      @extend %needs_attention;

      background-size: 6px 6px, 0 0;
    }
  }
}

/*******************************************************************/
/*                  PLACESSIDEBAR                                  */
/*******************************************************************/

/*--*/

placessidebar {

		background-color: $_sidebar_color;
		row{
      padding: 1px 11px;
			&.sidebar-row {
				&.sidebar-row{
          margin: 0;
          border-radius: 0;
          label { padding-left: 8px; }
					.sidebar-icon {
						margin-left:-14px;
						margin-right: 5px;
						padding-left: 14px;
						padding-right: 5px;
					}
				}
				&:hover, &:active, &:selected{
          background-color: lighten($_sidebar_color, 7%);
          &, label {
            color: $selected_fg_color;
            font-weight: normal;
          }
				}

				&:selected{
          &:backdrop{
            color: $backdrop_text_color;
            label {
              color: $backdrop_text_color;
            }
            background-color: transparent;
            background-image:linear-gradient(to right, transparentize(darken($_sidebar_color, 3%), 0.07) 40px,
            transparentize(darken($_sidebar_color, 3%), 0.07) 36px, transparentize(darken($_sidebar_color, 3%), 0.07) 97%);
          }

					.sidebar-icon {
						color: inherit; 
					}
        }
        
        &.sidebar-new-bookmark-row { 
          &, label, .sidebar-icon {
            color: $yellow; 
          }
        }

        &:drop(active):not(:disabled) {
          &, label, image { color: $drop_target_color; }
    
          box-shadow: inset 0 1px $drop_target_color,
                      inset 0 -1px $drop_target_color;
    
          &:selected {
            &, label, image { color: $selected_fg_color; }
            background: $drop_target_color;
          }
        }

			}
		}
	
	list{ 
		background-color: transparent; 
		&:backdrop { background-color: transparent; }
	}
  
  
}

// Gnome 46: File operations status bar at the bottom of sidebar
.sidebar-pane {
  &, .bottom.bar { background-color: $_sidebar_color; }
  .bottom-bar {
    button {
      background-color: transparent;
      border-radius: 0px;
      border: none;
      .view { background-color: transparent; }
    }
  }
}

